{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "08d50990-f25d-472c-8ee8-8fda99978afd",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "5363e476-40ec-4e32-ad59-5ec505fac9e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "52361c5c-a6d8-4e68-91fc-e1e93180d8c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeJob",
                    "type": "Button",
                    "id": "faca498d-f838-42ec-ad82-4cd97809eb8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLeader",
                    "type": "Button",
                    "id": "9abb4420-5790-4465-9f73-ee2773e9c4b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "b21eb490-fb14-4c2d-bd53-85b9bf95b2e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Value",
                    "id": "eb41fa16-b0af-4b6d-9c97-b02a06cb6bb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ce1f68e1-8a18-45a5-af78-d98bdeeb41d2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "674cab6f-3533-4e62-817b-cd182c504ace",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6c28a886-d240-4c77-bf2c-d17d018e15f0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "00cf6e22-2f0a-447c-815f-144b889e2621",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cfd8ebb1-7885-449b-87a5-f669b41ef818",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1845b2f6-b324-4daa-b25e-c85b1e70eb66",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6cc6f68a-72da-463c-8e7c-5f8033959584",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ChangeJob",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2db0dc6-1b85-471e-aa7e-cac4e7154d3b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ChangeLeader",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "wasd",
                    "id": "84b978f0-15bf-44d5-9861-adbb8c5e5ba4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "1c5a13bd-a404-4809-8b94-68873f7b4941",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "b72f9951-8124-477e-a775-41fcda7d137c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "1ad0e203-0619-4ddf-95ab-c1221d887598",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "1b223cf8-e870-487c-b280-9e3b17831b94",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "gamepad",
                    "id": "fd1e43c3-cd9d-4f46-874f-da3cda3ff243",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f905b11b-5da6-40fb-a108-2e50e067cf0d",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a83df40b-f056-48fa-9abe-abadc7913986",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f86e463f-8884-43a9-98f0-501393fcb520",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4e34681f-903f-4d9b-a44e-ea7392d8c30b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "27787df4-5866-4c1e-9c7f-751766525949",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}